# LLM

./: README.md  pipeline.py  pyproject.toml
examples/: pancake_demo.py
src/hts_coil/: __init__.py  field.py  frames.py  geometry.py  jc_interface.py  pipeline.py  probe.py  segments.py  utils.py
tests/: test_pancake_field_solver.py  test_probe.py
