[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "hts-coil"
version = "0.1.0"
description = "Physics-guided HTS pancake coil evaluation with Biot-Savart and pluggable Jc models"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
